Closed
Bug 98783
Opened 24 years ago
Closed 24 years ago
[RR]:hover only applies to first line of broken text when reflow required
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
VERIFIED
FIXED
mozilla0.9.9
People
(Reporter: psychosos, Assigned: dbaron)
References
Details
(Keywords: testcase)
Attachments
(2 files)
|
650 bytes,
text/html
|
Details | |
|
915 bytes,
patch
|
attinasi
:
review+
hyatt
:
superreview+
|
Details | Diff | Splinter Review |
When I define that a text block should be 2.6cm (with width:2.6cm) and want to use the :hover-pseudoformat with this block then the :hover applies only to the first line of the text.
See http://193.171.249.108/~jrichter/bugzilla/ for a demo (the Copyright notice in the left; please ignore the other content of the site:)
| Assignee | ||
Comment 3•24 years ago
|
||
No, :hover across split text does work in the general case, so it's something
very specific about this page.
Comment 5•24 years ago
|
||
I think I have an easier testcase for this bug. Go to the page
http://www.farbeyon.de/moz/moz1.html. There is a 'br' tag in the text of a link.
Move your mouse pointer over the line 'Cavern/3919/Horwood.html'. Actual result:
no change (only the part befor 'br' becomes bold). Expected behaviour: This part
of the link gets bold, too.
An example of Mozilla behaving correct is at
http://www.farbeyon.de/moz/moz2.html. The only difference is 'color:#ffff33'
instead of 'font-weight: bold' in 'a:hover'.
Tell me if you think this is a different bug, I will file a new one then.
| Reporter | ||
Comment 6•24 years ago
|
||
To Fabian: I am in no way a developer (actually i am just a stupid little user) but i would say this is the same, my description was not exact (or better, i did not research enough)
So to rephrase it: some font-formatting commands (font-weight,font-style) doesn't work with :hover if the text is broken.
Is this ok?
| Assignee | ||
Comment 7•24 years ago
|
||
| Assignee | ||
Comment 8•24 years ago
|
||
This problem only happens when a reflow is required for the :hover effect. This
could happen because of "font-weight: bold" (as in the testcase) or
"border-left: 1px solid black" (which also causes the same problem).
I suspect there's something funny going on with continuing frames.
Summary: :hover doesn't work when text is broken → :hover only applies to first line of broken text when reflow required
| Assignee | ||
Updated•24 years ago
|
Component: Style System → Layout
Comment 9•24 years ago
|
||
*** Bug 103507 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 10•24 years ago
|
||
*** Bug 111228 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 11•24 years ago
|
||
At least part of bug 93104 is a duplicate of this bug.
Comment 12•24 years ago
|
||
*** Bug 115985 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 14•24 years ago
|
||
I think this is happening because of an incorrect optimization in
FrameManager::ComputeStyleChangeFor that breaks out of the loop when the style
hint is reflow. This ignores the fact that there could still be a style change
applying to children.
| Assignee | ||
Comment 15•24 years ago
|
||
(However, what I think would be a valid optimization to repace that optimization
with would be to steal style contexts from the prev-in-flow when they exist
rather than recomputing them and ending up with multiple style contexts where
there used to be one. At least, I think we use the same style contexts when we
split frames.)
| Assignee | ||
Comment 16•24 years ago
|
||
I think this is really a style bug, as it turns out. Setting TM optimistically.
Assignee: attinasi → dbaron
Component: Layout → Style System
QA Contact: petersen → ian
Summary: :hover only applies to first line of broken text when reflow required → [RR]:hover only applies to first line of broken text when reflow required
Target Milestone: --- → mozilla0.9.9
| Assignee | ||
Comment 17•24 years ago
|
||
Commenting out the optimization that I mentioned does fix this bug.
Comment 18•24 years ago
|
||
What's the perf hit when commenting that out? Seems like if it's not much
(completely subjective) then we have a stop-gap solution until a better
optimization is in place?
| Assignee | ||
Comment 19•24 years ago
|
||
It's a completely invalid optimization and it's only going to make a difference
in performance when causing style reresolution directly on an element that is split.
| Assignee | ||
Comment 20•24 years ago
|
||
I think this is the same as bug 41521.
| Assignee | ||
Comment 21•24 years ago
|
||
| Assignee | ||
Comment 22•24 years ago
|
||
Actually, the optimization I mentioned in comment 15 should already be done by
StyleSetImpl::GetContext (although in a roundabout and slightly stronger way).
Comment 23•24 years ago
|
||
Comment on attachment 65717 [details] [diff] [review]
patch
sr=hyatt
Attachment #65717 -
Flags: superreview+
Comment 24•24 years ago
|
||
Comment on attachment 65717 [details] [diff] [review]
patch
sr=hyatt
Comment 25•24 years ago
|
||
*** Bug 123497 has been marked as a duplicate of this bug. ***
Comment 26•24 years ago
|
||
could this fix bug 106344 ?
| Assignee | ||
Comment 27•24 years ago
|
||
Unlikely.
Comment 28•24 years ago
|
||
Comment on attachment 65717 [details] [diff] [review]
patch
r=attinasi
Attachment #65717 -
Flags: review+
| Assignee | ||
Comment 29•24 years ago
|
||
Fix checked in 2002-02-16 08:31 PDT.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 30•24 years ago
|
||
Yay! This bug WFM! :) I am verifying, but as always, re-open if you find it is
still a problem.
--> verified
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•