Fix invalid optimization that prevented style changes on inline elements that caused a reflow from applying to more than the first line.  b=98783  r=attinasi  sr=hyatt